--- a/jsontron/package.json
+++ b/jsontron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsontron",
-  "version": "0.8.2",
+  "version": "0.8.5",
   "description": "Schematron based JSON Validator",
   "main": "lib/jsontron.js",
   "scripts": {
@@ -16,7 +16,8 @@
   "dependencies": {
     "jsonpath": "^0.2.9",
     "minimist": "^1.2.0",
-    "JSV": "^4.0.2"
+    "JSV": "^4.0.2",
+    "jasmine":"^3.2.0"
   },
   "devDependencies": {},
   "repository": {
