--- a/jsontron/.gitignore
+++ b/jsontron/.gitignore
@@ -13,7 +13,10 @@ archive1/
 .setting/
 
 # Project files
-.project
+#.project
 
 # scratch file
-scratch*
+#scratch*
+
+# node modules
+node_module/
