--- a/jsontron/package.json
+++ b/jsontron/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jsontron",
-  "version": "0.8.8",
+  "version": "0.8.9",
   "description": "Schematron based JSON Validator",
   "main": "lib/jsontron.js",
   "scripts": {
-    "test": "echo 'Error: no test specified' && exit 1"
+    "test": "tests/tests.js"
   },
   "author": "Amer Ali",
   "license": "MIT",
@@ -16,10 +16,13 @@
   "dependencies": {
     "jsonpath": "^0.2.9",
     "minimist": "^1.2.0",
-    "JSV": "^4.0.2",
-    "jasmine": "^3.2.0"
+    "JSV": "^4.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  
+    "jasmine": "^3.2.0"
+  
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/amer-ali/jsontron.git"
