--- a/jsontron/package.json
+++ b/jsontron/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jsontron",
-  "version": "0.8.17",
+  "version": "0.8.18",
   "description": "Schematron based JSON Validator",
   "main": "lib/jsontron.js",
   "scripts": {
-    "test": "tests/tests.js"
+    "test": "node tests/tests.js"
   },
   "author": "Amer Ali",
   "license": "MIT",
